log
Tue 07 May 2024 06:42:08 PM UTC: 
 tests:  1|8
total_score: 0/70
ed2ca26
Tue 07 May 2024 06:45:54 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
c911557
Tue 07 May 2024 07:03:37 PM UTC: 
 treemap.c | 49 +++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 43 insertions(+), 6 deletions(-)
 tests:  3|7
total_score: 5/70
b889ad4
Tue 07 May 2024 07:07:06 PM UTC: 
 treemap.c | 17 ++++++++---------
 1 file changed, 8 insertions(+), 9 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:19: error: unused variable ‘parent’ [-Werror=unused-variable]
   59 |         TreeNode *parent = NULL;
      |                   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
5ea8547
Tue 07 May 2024 07:10:33 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
d1696d0
Tue 07 May 2024 07:12:39 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  4|7
total_score: 5/70
dc2c90f
Tue 07 May 2024 07:12:51 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
8209371
Tue 07 May 2024 07:14:17 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|7
total_score: 5/70
2499c51
Tue 07 May 2024 07:33:21 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
db660ae
Wed 08 May 2024 01:00:55 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
8aa587d
Wed 08 May 2024 02:00:29 AM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:108:5: error: expected expression before ‘}’ token
  108 |     }
      |     ^
Compilation failed
a9b0e5d
Wed 08 May 2024 02:00:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
ae939c0
Wed 08 May 2024 02:11:47 AM UTC: 
 treemap.c | 30 +++++++++++++++++++++++++++++-
 1 file changed, 29 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
983cc64
Wed 08 May 2024 02:35:51 AM UTC: 
 treemap.c | 47 ++++++++++++++++++++++++++++++++++++-----------
 1 file changed, 36 insertions(+), 11 deletions(-)
 tests:  8|5
total_score: 15/70
8db052c
Wed 08 May 2024 02:38:35 AM UTC: 
 treemap.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
 tests:  8|5
total_score: 15/70
d0ab853
Wed 08 May 2024 02:54:41 AM UTC: 
 treemap.c | 73 +++++++++++++++++++--------------------------------------------
 1 file changed, 22 insertions(+), 51 deletions(-)
 tests:  8|5
total_score: 15/70
0c14462
Wed 08 May 2024 02:56:48 AM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 15/70
4089695
Wed 08 May 2024 03:04:30 AM UTC: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  8|5
total_score: 15/70
b18f9ff
Wed 08 May 2024 03:07:01 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  8|5
total_score: 15/70
09a0076
Wed 08 May 2024 03:07:20 AM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  8|5
total_score: 15/70
e7bbca5
Wed 08 May 2024 03:19:39 AM UTC: 
 treemap.c | 40 ++++++++++++++++++++++++++++++++--------
 1 file changed, 32 insertions(+), 8 deletions(-)
In file included from test.c:4:
treemap.c:189:1: error: expected identifier or ‘(’ before ‘}’ token
  189 | }
      | ^
Compilation failed
6724048
Wed 08 May 2024 03:21:02 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
f92e532
Wed 08 May 2024 03:21:43 AM UTC: 
 treemap.c | 78 ---------------------------------------------------------------
 1 file changed, 78 deletions(-)
 tests:  8|5
total_score: 15/70
0361654
Wed 08 May 2024 03:23:12 AM UTC: 
 treemap.c | 78 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 78 insertions(+)
 tests:  8|5
total_score: 15/70
f47c458
Wed 08 May 2024 03:25:00 AM UTC: 
 treemap.c | 78 ---------------------------------------------------------------
 1 file changed, 78 deletions(-)
 tests:  8|5
total_score: 15/70
f08d352
Wed 08 May 2024 03:25:16 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:110:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  110 |     return NULL;
      |            ^~~~
treemap.c:108:6: note: declared here
  108 | void removeNode(TreeMap * tree, TreeNode* node)
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d04d64c
Wed 08 May 2024 03:25:40 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:110:12: error: returning ‘void *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Werror=int-conversion]
  110 |     return NULL;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
ae5e905
Wed 08 May 2024 03:25:58 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 15/70
ad5441c
Wed 08 May 2024 03:28:13 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
bb916c3
Wed 08 May 2024 03:28:44 AM UTC: 
 treemap.c | 79 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 77 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 15/70
02a1cd6
Wed 08 May 2024 08:02:46 PM UTC: 
 treemap.c | 148 +++-----------------------------------------------------------
 1 file changed, 6 insertions(+), 142 deletions(-)
 tests:  1|8
total_score: 0/70
e987ac9
Wed 08 May 2024 08:03:58 PM UTC: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  1|8
total_score: 0/70
5d51dd6
